Fix Relative layout issue

--- a/src/components/relatives/Relatives.scss
+++ b/src/components/relatives/Relatives.scss
@@ -215,7 +215,6 @@
 
     
       @include mx.flexed(column, flex-start, flex-start);
-      border-right:1px solid $color-outline;
       margin-top:0;
     
 
