--- a/src/components/views/Views.scss
+++ b/src/components/views/Views.scss
@@ -125,7 +125,6 @@
   .views {
   width:96.7%;
  
- border-right:1px solid $color-outline;
    &__p{
       padding-right: 2.4rem;
     }
